[tool.poetry]
name = "sciuromorpha-storage"
version = "0.1.0"
description = ""
authors = ["Whale Mo <ncwhale@gmail.com>"]
readme = "README.md"
packages = [{include = "sciuromorpha_storage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["rabbit", "redis"], version = "^0.3.2"}
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
